crates/modor/tests/compilation/compile_fail/entity_with_system_as_self_action.rs
extern crate modor;

use modor::*;

struct Entity;

#[entity]
//~^ error: the trait bound `EntityAction: modor::Component` is not satisfied
impl Entity {
    #[run_as(component(Self))]
    fn f() {}
}

fn main() {}
